apps/honcho/components/monitoring/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: honcho-metrics
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: honcho
      app.kubernetes.io/name: honcho
  policyTypes:
    - Ingress
